[package]
name = "cch23-demonqilin01"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
axum = { version = "0.6.20", features = ["multipart"] }
base64 = "0.21.5"
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
tower-http = { version = "0.4.4", features = ["fs"] }
image = "0.24.7"
ulid = { version = "1.1.0", features = ["uuid", "serde"] }
uuid = { version = "1.6.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["clock"] }
